# controllers/userController.js
@@ -1,97 +1,8 @@
-// const jwt = require("jsonwebtoken")
-// const password_complexity = require("joi-password-complexity")
-// const bcryptjs  = require ("bcryptjs")
-// const {userModel }= require ("../models//userModel")
-// const {validate} = require("../utils/userValidations.js")
-
-
-
-
-// exports.createUser = async (req, res) => {
-//   const { error } = validate(req.body);
-//   if (error) return res.status(400).send(error.details[0].message);
-
-//   const { email, password, confirmPassword } = req.body;
-
-//   // Check if password matches confirmPassword
-//   if (password !== confirmPassword) {
-//     return res.status(400).send("Passwords do not match");
-//   }
-
-//   let user = await userModel.findOne({ email });
-//   if (user) {
-//     return res.status(400).send(`The user with email ${email} already exists`);
-//   }
-
-//   try {
-//     const salt = await bcryptjs.genSalt(10);
-//     const hashedPassword = await bcryptjs.hash(password, salt);
-
-//     // Create a new user instance
-//     user = new userModel({
-//       email,
-//       password: hashedPassword
-//     });
-
-//     console.log("Before token");
-//     let token = jwt.sign({ _id: user._id }, process.env.SECRET, {
-//       expiresIn: "1h"
-//     });
-//       console.log(token);
-
-//     // Save the user to the database
-//     await user.save();
-
-//     // Generate token
-    
-
-//     // Send success response with user and token
-//     res.status(201).send({ user, token });
-//   } catch (error) {
-//     console.error(error);
-//     res.status(500).send("An error occurred while creating the user");
-//   }
-// };
-
-
-
-// exports.loginUser = async (req, res, next) => {
-//   try {
-//     const { email, password } = req.body;
-//     const user = await userModel.findOne({
-//       email: email
-//     });
-//     if (!user) {
-//       return res.status(404).send("incorrect fname or password ");
-//     }
-//     const passwordMatch = await bcryptjs.compare(password, user.password);
-//     if (!passwordMatch) {
-//       return res.status(404).send("incorrect fname or password");
-//     }
-//     let token = jwt.sign(
-//       {
-//         _id: user._id
-//       },
-//       process.env.SECRET
-//     );
-   
-
-//     res.status(200).header("Authorization", token).json({
-//       success: true,
-//       token: token,
-
-//     });
-
-//     next();
-//   } catch (error) {
-//     console.log(error);
-//   }
-// }
-
 
 const jwt = require("jsonwebtoken");
 const password_complexity = require("joi-password-complexity");
 const bcryptjs = require("bcryptjs");
+
 const User = require("../models/userModel");
 const { validate } = require("../utils/userValidations");
 
@@ -100,11 +11,7 @@ exports.createUser = async (req, res) => {
   const { error } = validate(req.body);
   if (error) return res.status(400).send(error.details[0].message);
 
-  const { email, password, confirmPassword } = req.body;
-
-  if (password !== confirmPassword) {
-    return res.status(400).send("Passwords do not match");
-  }
+  const { email,password,firstName,lastName } = req.body;
 
   try {
     let user = await User.findOne({ where: { email } });
@@ -119,7 +26,9 @@ exports.createUser = async (req, res) => {
 
     user = await User.create({
       email,
-      password: hashedPassword
+      password: hashedPassword,
+      firstName,
+      lastName
     });
     res.status(201).send({ user});
   } catch (error) {
