# models/employeeModel.js
@@ -1,51 +1,0 @@
-
-
-const { DataTypes } = require("sequelize");
-
-const sequelize = require("../middleware/sequelize");
-
-const Employee = sequelize.define("Employee", {
-  firstName: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  lastName: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  email: {
-    type: DataTypes.STRING,
-    allowNull: false,
-    unique: true
-  },
-  nationalId: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  telephone: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  department: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  position: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  laptopManufacturer: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  model: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  serialNumber: {
-    type: DataTypes.STRING,
-    allowNull: false
-  }
-});
-
-module.exports = Employee;
